; ModuleID = '/home/carl/AnghaBench/radare2/libr/io/p/extr_io_http.c___lseek.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/io/p/extr_io_http.c___lseek.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_3__*, i32*, i64, i32)* @__lseek to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @__lseek(%struct.TYPE_3__* %0, i32* %1, i64 %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_3__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %6, align 8
  store i32* %1, i32** %7, align 8
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  %10 = load i32, i32* %9, align 4
  switch i32 %10, label %22 [
    i32 128, label %11
    i32 130, label %13
    i32 129, label %19
  ]

11:                                               ; preds = %4
  %12 = load i64, i64* %8, align 8
  store i64 %12, i64* %5, align 8
  br label %24

13:                                               ; preds = %4
  %14 = load %struct.TYPE_3__*, %struct.TYPE_3__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %8, align 8
  %18 = add nsw i64 %16, %17
  store i64 %18, i64* %5, align 8
  br label %24

19:                                               ; preds = %4
  %20 = load i32*, i32** %7, align 8
  %21 = call i64 @RIOHTTP_SZ(i32* %20)
  store i64 %21, i64* %5, align 8
  br label %24

22:                                               ; preds = %4
  %23 = load i64, i64* %8, align 8
  store i64 %23, i64* %5, align 8
  br label %24

24:                                               ; preds = %22, %19, %13, %11
  %25 = load i64, i64* %5, align 8
  ret i64 %25
}

declare dso_local i64 @RIOHTTP_SZ(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
